--- a/app/templates/admin/repositories.twig
+++ b/app/templates/admin/repositories.twig
@@ -7,26 +7,28 @@
 
     {% if repositories %}
 
-        <table>
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Notification Email</th>
-                <th>Github Location</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for repository in repositories %}
+        <div class="overflow-container">
+            <table>
+                <thead>
                 <tr>
-                    <td><a href="/r/{{ repository.ShortName }}">/r/{{ repository.ShortName }}</a></td>
-                    <td>{{ repository.OwnerEmail }}</td>
-                    <td><a href="http://git/{{ repository.GithubUser }}/{{ repository.GithubRepo }}">{{ repository.GithubUser }}/{{ repository.GithubRepo }}</a></td>
-                    <td><a href="/admin/repositories/{{ repository.RepositoryId }}/remove">Remove</a> </td>
+                    <th>Name</th>
+                    <th>Notification Email</th>
+                    <th>Github Location</th>
+                    <th>Actions</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for repository in repositories %}
+                    <tr>
+                        <td><a href="/r/{{ repository.ShortName }}">/r/{{ repository.ShortName }}</a></td>
+                        <td>{{ repository.OwnerEmail }}</td>
+                        <td><a href="http://git/{{ repository.GithubUser }}/{{ repository.GithubRepo }}">{{ repository.GithubUser }}/{{ repository.GithubRepo }}</a></td>
+                        <td><a href="/admin/repositories/{{ repository.RepositoryId }}/remove">Remove</a> </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
     {% endif %}
 
