--- a/app/templates/error.html.twig
+++ b/app/templates/error.html.twig
@@ -3,7 +3,7 @@
 {% set page_title = "Not Found" %}
 
 {% block content %}
-    <div class="error">
+    <div class="error-page">
         <h1>{{ message }}</h1>
         <img src="/img/error/{{ random(['blink.gif', 'walk.gif']) }}" />
     </div>
