--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,3 +48,4 @@
 @import "partials/base/tables";
 @import "partials/patterns/nav";
 @import "partials/patterns/buttons";
+@import "partials/patterns/alert-bar";
