--- a/app/templates/admin/arrangements.twig
+++ b/app/templates/admin/arrangements.twig
@@ -6,24 +6,26 @@
     <h2>Manage Repository Groups</h2>
     {% if arrangements %}
 
-        <table>
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Repositories</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for arrangement in arrangements %}
+        <div class="overflow-container">
+            <table>
+                <thead>
                 <tr>
-                    <td>{{  arrangement.Name }}</td>
-                    <td><a href="/a/{{arrangement.ShortName}}">/a/{{arrangement.ShortName}}</a></td>
-                    <td></td>
+                    <th>Name</th>
+                    <th>Repositories</th>
+                    <th>Actions</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for arrangement in arrangements %}
+                    <tr>
+                        <td>{{  arrangement.Name }}</td>
+                        <td><a href="/a/{{arrangement.ShortName}}">/a/{{arrangement.ShortName}}</a></td>
+                        <td></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
     {% else %}
         <p>You don't seem to have any arrangements setup yet.</p>
