--- a/app/templates/denied.html.twig
+++ b/app/templates/denied.html.twig
@@ -3,7 +3,7 @@
 {% set page_title = "Access Denied" %}
 
 {% block content %}
-    <div class="error">
+    <div class="error-page">
         <h1>I'm sorry Dave, I'm afraid I can't do that.</h1>
         <img width="600px" src="/img/error/eye_large.jpg" />
     </div>
