--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,26 +1,28 @@
 //
 // Color variables
 ///
-$primary-color: #78a8c0;
-$secondary-color: #486060;
-$tertiary-color: #01002b;
-$quaternary-color: #d8d8a8;
-$text-color: #333; //http://ianstormtaylor.com/design-tip-never-use-black/
+$text-color: #070103;
+$grey: #5d4c5d;
+$light-grey: #d7cbd7;
+$white: #ffffff;
+$bright-blue: #4cb1dd;
+$blue: #236298;
+$dark-blue: #01002b;
+$red: #d63620;
+$yellow: #e0a63a;
 $warning-color: #ff7c00;
-$error-color: #c00000;
+$error-color: $red;
 $success-color: #00c92c;
-$highlight-color: #ffc440;
-$grey: #7a7a7a;
-$white: #FDFEF3;
+$highlight-color: $yellow;
 
 //
 // Link state colors.
 ///
-$link-color: $primary-color;
-$link-interaction-color: tint($primary-color, 30%); // :hover, :active, :focus
+$link-color: $blue;
+$link-interaction-color: tint($blue, 20%); // :hover, :active, :focus
 
 //
 // Highlight colors for when you select text on the page
 ///
-$selection-bg-color: $primary-color;
+$selection-bg-color: $blue;
 $selection-text-color: $white;
