--- a/sass/partials/base/_forms.scss
+++ b/sass/partials/base/_forms.scss
@@ -2,12 +2,10 @@
     width: 100%;
     @include adjust-font-size-to(ms(1));
     padding: rhythm(.5, ms(1));
-    background: #f5f5f5;
-    @include box-shadow(inset 0 5px 2px rgba(0,0,0,.05), inset 0 1px 0 #999, inset 1px 0px 0 #999, inset -1px 0px 0 #999, inset 0px -1px 0 #999);
-    border-radius: 4px;
+    background: #fff;
+    box-shadow: inset 0 2px 0 $grey, inset 2px 0px 0 $grey, inset -2px 0px 0 $grey, inset 0px -2px 0 $grey;
     &:focus {
-        @include box-shadow(inset 0 1px 0 #ccc, inset 1px 0px 0 #ccc, inset -1px 0px 0 #ccc, inset 0px -1px 0 #ccc);
-        background: #fff;
+        box-shadow: inset 0 2px 0 $blue, inset 2px 0px 0 $blue, inset -2px 0px 0 $blue, inset 0px -2px 0 $blue;
     }
 }
 
@@ -21,4 +19,9 @@ legend {
     padding: 0 msem(6);
     @include rhythm(0,1,1,1);
     color: $error-color;
+}
+
+select {
+    width: 100%;
+    border: 1px solid $grey;
 }
